add chat function

--- a/client/index.html
+++ b/client/index.html
@@ -108,13 +108,11 @@
     <div class="content" id="content" style="display: none">
         <div class="leftcontact" id="leftcontact">
             <div id="headerimg" class="leftheader">
-                <span> <img src="static/img/head/header2.jpg" alt="logo"
-                    class="img-circle" width="60px" height="60px"
-                    style="margin-top: -40px; margin-left: 20px" /></span> <span
+                <span
                     id="login_user" class="login_user_title"> <a
                     class="leftheader-font" href="#"></a>
                 </span> <span>
-                    <div class="btn-group" style="margin-left: 5px;">
+                    <div class="btn-group" style="margin-left: 85px;">
                         <button class="btn btn-inverse dropdown-toggle" data-toggle="dropdown">
                             <span class="caret"></span>
                         </button>
