--- a/client/index.html
+++ b/client/index.html
@@ -59,10 +59,12 @@
             <table>
                 <tr>
                     <td width="65%">
+                        <label for="email">邮箱:</label>
+                        <input type="text" name="email" value="" id="regist_email" tabindex="1"/>
                         <label for="username">用户名:</label>
-                        <input type="text" name="username" value="" id="regist_username" tabindex="1"/>
+                        <input type="text" name="username" value="" id="regist_username" tabindex="2"/>
                         <label for="password">密码:</label>
-                        <input type="password" name="password" value="" id="regist_password" tabindex="2" />
+                        <input type="password" name="password" value="" id="regist_password" tabindex="3" />
                     </td>
                 </tr>
             </table>
@@ -109,10 +111,10 @@
         <div class="leftcontact" id="leftcontact">
             <div id="headerimg" class="leftheader">
                 <span
-                    id="login_user" class="login_user_title"> <a
-                    class="leftheader-font" href="#"></a>
+                    id="login_user" class="login_user_title"> 
+                    <a class="leftheader-font" href="#"></a>
                 </span> <span>
-                    <div class="btn-group" style="margin-left: 85px;">
+                    <div class="btn-group" style="margin-left: 5px;">
                         <button class="btn btn-inverse dropdown-toggle" data-toggle="dropdown">
                             <span class="caret"></span>
                         </button>
